// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a default button 1`] = `
<div>
  <button
    class="sc-FEMpB dSUzxr"
  />
</div>
`;

exports[`renders a primary button 1`] = `
<div>
  <button
    class="sc-FEMpB sc-gjcoXW dSUzxr dPsAPq"
  >
    Label
  </button>
</div>
`;
